Use new protocol for kurrentdb